--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,7 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "prisma/*": [
-        "prisma/*"
-      ]
+      "@/*": ["src/*"]
     }
   }
 }
